bynkc/tests/fixtures/positive/181_karn_random_uuid_refined/src/ids/gen.karn
context ids.gen

consumes karn { Random }

service generate {
  on call() -> Effect[Uuid] given Random {
    let id <- Random.uuid()
    id
  }
}
