bynkc/tests/fixtures/negative/143_consume_unexported_cap/src/app/svc.karn
context app.svc

consumes tokens { Nope }

service s {
  on call() -> Effect[Int] { 1 }
}
